--- a/ProductGalleryWeather.API/appsettings.json
+++ b/ProductGalleryWeather.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost, 1400;Database=ProductGallery;Trusted_Connection=false;MultipleActiveResultSets=true;Encrypt=false;user id=sa;password=P@ssword1;"
+    "DefaultConnection": "Server=mssql-db;Database=ProductGallery;Trusted_Connection=false;MultipleActiveResultSets=true;Encrypt=false;user id=sa;password=P@ssword1;"
   },
   "Logging": {
     "LogLevel": {
