--- a/ProductGalleryWeather.API/appsettings.json
+++ b/ProductGalleryWeather.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=mssql-db;Database=ProductGallery;Trusted_Connection=false;MultipleActiveResultSets=true;Encrypt=false;user id=sa;password=P@ssword1;"
   },
+  "Jwt": {
+    "Key": "YourSuperSuperSecretKey1234567890"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
